<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
            android:id="@+id/main"
            android:checkableBehavior="single">
        <item
                android:id="@+id/usersFragment"
                android:icon="@drawable/ic_users"
                android:title="@string/users_title"/>

        <item
                android:id="@+id/categoryFragment"
                android:icon="@drawable/ic_category"
                android:title="@string/category"
        />

        <item
                android:id="@+id/cashAccountFragment"
                android:icon="@drawable/ic_cash_account"
                android:title="@string/cash_accounts_title"
        />

        <item
                android:id="@+id/plannedExpenseFragmentSettings"
                android:icon="@drawable/ic_planned_expense"
                android:title="@string/planned"
        />

    </group>

    <group
            android:id="@+id/settings"
            android:checkableBehavior="single">

        <item
                android:id="@+id/settingsFragment"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings_title"
        />
    </group>


</menu>