<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable name="viewModel" type="com.example.budget.viewModel.AuthViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp"
    >

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/emailHint"
                app:boxBackgroundMode="outline"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:selectAllOnFocus="true"
                android:layout_marginTop="190dp"
                app:errorEnabled="true"
                app:errorText="@{viewModel.emailField.error}"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
        >

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.emailField.data}"
            />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/passwordField"
                app:boxBackgroundMode="outline"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:selectAllOnFocus="true"
                app:endIconMode="password_toggle"
                app:errorText="@{viewModel.passField.error}"
                app:errorEnabled="true"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginField"
        >

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:text="@={viewModel.passField.data}"
            />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/signButton"
                android:enabled="@{ viewModel.checkError() }"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/signInOrSignUp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordField"
                app:layout_constraintVertical_bias="0.2"
        />

        <ProgressBar
                android:id="@+id/loading"
                android:visibility="@{viewModel.isLoading.data ? View.VISIBLE : View.GONE }"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="64dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/passwordField"
                app:layout_constraintStart_toStartOf="@+id/passwordField"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>